--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,18 @@
-title            : test course
-description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
-university       : DataCamp
-difficulty_level : 2
-time_needed      : 1 hour
+id: 58
+title: Introduction to R
+instructors:
+ - jonathan+author@datacamp.com
+time_needed: 4 hours
+difficulty_level: 0
+programming_language: r
+description: "In this introduction to R, you will master the basics of this beautiful
+  open source language, including factors, lists and data frames. With the knowledge
+  gained in this course, you will be ready to undertake your first very own data
+  analysis. With over 2 million users worldwide R is rapidly becoming the leading
+  programming language in statistics and data science. Every year, the number of R
+  users grows by 40% and an increasing number of organizations are using it in their
+  day-to-day activities. Leverage the power of R by completing this free R online
+  course today!"
+from: "r-base-prod:27"
+runtime_config: minimal
+practice_pool_id: 106
